Fixed the broken layout issue

--- a/src/app/layout/forecast/mo4-light/mo4-light.component.scss
+++ b/src/app/layout/forecast/mo4-light/mo4-light.component.scss
@@ -16,4 +16,5 @@
 
 app-heading-picker {
   align-self: center;
+  justify-content: center;
 }
